--- a/src/main/webapp/ModsEditorDemo.html
+++ b/src/main/webapp/ModsEditorDemo.html
@@ -1,9 +1,7 @@
-<!doctype html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <!-- The DOCTYPE declaration above will set the    -->
 <!-- browser's rendering engine into               -->
-<!-- "Standards Mode". Replacing this declaration  -->
-<!-- with a "Quirks Mode" doctype may lead to some -->
-<!-- differences in layout.                        -->
+<!-- "Quirks Mode" required by SmartGWT. -->
 
 <html>
     <head>
@@ -24,6 +22,7 @@
         <!-- If you add any GWT meta tags, they must   -->
         <!-- be added before this line.                -->
         <!--                                           -->
+        <script> var isomorphicDir = "ModsEditorDemo/sc/"; </script>
         <script type="text/javascript" language="javascript" src="ModsEditorDemo/ModsEditorDemo.nocache.js"></script>
     </head>
 
